--- a/temp-front/package.json
+++ b/temp-front/package.json
@@ -18,7 +18,8 @@
     "react-router": "^6.4.3",
     "react-router-dom": "^6.4.3",
     "react-scripts": "^5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "ws": "^8.10.0"
   },
   "scripts": {
     "start:dev": "CHOKIDAR_USEPOLLING=true react-scripts start",
@@ -43,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint-plugin-only-warn": "^1.0.3"
   }
 }
